[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/Hand.gd" type="Script" id=1]
[ext_resource path="res://sprites/ui_container.png" type="Texture" id=2]
[ext_resource path="res://sound/play_card.wav" type="AudioStream" id=3]
[ext_resource path="res://sound/shuffle.wav" type="AudioStream" id=4]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.784314, 0.831373, 0.364706, 1 )

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 10, 10 )
margin_left = 4.0
margin_right = 4.0
margin_top = 4.0
margin_bottom = 4.0
expand_margin_left = 4.0
expand_margin_right = 4.0
expand_margin_top = 4.0
expand_margin_bottom = 4.0

[node name="Hand" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
mouse_filter = 2
script = ExtResource( 1 )

[node name="HandContainer" type="VBoxContainer" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
size_flags_vertical = 10
custom_constants/separation = 8
alignment = 2

[node name="RefreshCountdown" type="ProgressBar" parent="HandContainer"]
margin_left = 270.0
margin_top = 64.0
margin_right = 370.0
margin_bottom = 72.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 100, 8 )
mouse_filter = 2
size_flags_horizontal = 4
size_flags_vertical = 8
custom_styles/fg = SubResource( 2 )
custom_styles/bg = SubResource( 1 )
max_value = 10.0
value = 10.0
percent_visible = false

[node name="CardContainer" type="HBoxContainer" parent="HandContainer"]
margin_top = 80.0
margin_right = 640.0
margin_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 0, 100 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 8
alignment = 1

[node name="Shuffle" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 4 )
bus = "Sounds"

[node name="Play" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 3 )
bus = "Sounds"
